fixed backspace on mobile

--- a/css/intro.css
+++ b/css/intro.css
@@ -6,7 +6,7 @@
 	color: #ffffff;
 	font-size: 14px;
 
-	text-align: left;
+	text-align: justify;
 }
 #txtcrs {
 	background-color: red;
